--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
+#################
+## Laravel
+#################
 /vendor
 /node_modules
 Homestead.yaml
 Homestead.json
 .env
+
+#################
+## PHPStorm
+#################
+.idea
+
+#############
+## Windows detritus
+#############
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Mac crap
+.DS_Store
