--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "bootstrap-sass": "~3.3.5"
+    "bootstrap-sass": "~3.3.5",
+    "font-awesome": "~4.4.0",
+    "jquery": "~2.1.4"
   }
 }
