--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass": "~3.3.5",
-    "font-awesome": "~4.4.0",
+    "bootstrap": "v4.0.0-alpha.2",
+    "font-awesome": "fontawesome#~4.5.0",
     "jquery": "~2.1.4"
   }
 }
