--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.2",
     "font-awesome": "fontawesome#~4.5.0",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "d3": "~3.5.14"
   }
 }
