--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,10 @@
   ],
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.2",
+    "d3": "~3.5.14",
     "font-awesome": "fontawesome#~4.5.0",
     "jquery": "~2.1.4",
-    "d3": "~3.5.14"
+    "tether": "~1.3.2",
+    "trix": "~0.9.7"
   }
 }
