--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.2",
+    "bootstrap": "v4.0.0-alpha.3",
     "d3": "~3.5.14",
-    "font-awesome": "fontawesome#~4.5.0",
-    "jquery": "~2.1.4",
+    "font-awesome": "^4.6.0",
+    "jquery": "^2.1.4",
     "tether": "~1.3.2",
     "trix": "~0.9.7"
   }
