--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "private": true,
+  "scripts": {
+    "prod": "gulp --production",
+    "dev": "gulp watch"
+  },
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^6.0.0-9"
   },
   "dependencies": {
-    "d3": "^4.2.2",
-    "laravel-elixir": "^3.0.0"
+    "d3": "^4.2.2"
   }
 }
