--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "d3": "^4.2.8",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "trix": "^0.9.9"
   }
 }
