--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "laravel-elixir-webpack-official": "^1.0.2"
   },
   "dependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bootstrap": "^4.0.0-alpha.5",
     "d3": "^4.2.8",
     "font-awesome": "^4.6.3",
