--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-debugbar": "^3.0.0",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "davejamesmiller/laravel-breadcrumbs": "^4.1.0",
+        "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "intervention/image": "^2.3",
-        "davejamesmiller/laravel-breadcrumbs": "^3.0",
-        "doctrine/dbal": "^2.5",
         "laravel/passport": "^4.0",
-        "laravel/socialite": "^3.0"
+        "laravel/socialite": "^3.0",
+        "watson/active": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
