--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "axios": "^0.16.2",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4"
@@ -23,6 +24,7 @@
     "d3": "^4.10.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "trix": "^0.11.0"
