--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "^4.10.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "popper.js": "^1.12.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
