--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "laravel-elixir": "^6.0.0-11",
+    "laravel-elixir": "^6.0.0-17",
     "laravel-elixir-webpack-official": "^1.0.2"
   },
   "dependencies": {
-    "babel-core": "^6.18.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "bootstrap": "^4.0.0-alpha.5",
-    "d3": "^4.2.8",
+    "bootstrap": "^4.0.0-beta.3",
+    "d3": "^4.12.2",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "trix": "^0.9.9"
   }
 }
