--- a/composer.json
+++ b/composer.json
@@ -1,66 +1,70 @@
 {
-    "name": "elconejito/rabbithome",
-    "description": "RabbitHome.",
-    "keywords": ["framework", "laravel"],
+    "name": "elconejito/neighborhood",
+    "description": "Neighborhood.",
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "barryvdh/laravel-debugbar": "^3.0.0",
+        "php": "^7.2",
+        "barryvdh/laravel-debugbar": "^3.2.0",
         "barryvdh/laravel-ide-helper": "^2.4",
-        "davejamesmiller/laravel-breadcrumbs": "^4.1.0",
+        "davejamesmiller/laravel-breadcrumbs": "^5.3.0",
         "doctrine/dbal": "^2.5",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
         "intervention/image": "^2.3",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "laravel/passport": "^4.0",
-        "laravel/socialite": "^3.0",
-        "watson/active": "^2.0"
+        "laravel/framework": "^6.2",
+        "laravel/tinker": "^2.0",
+        "watson/active": "^4.0"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
+        "facade/ignition": "^1.4",
+        "fzaninotto/faker": "^1.9.1",
         "laracasts/generators": "^1.1",
-        "laravel/homestead": "^6.2",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "laravel/homestead": "^10.3",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
+    },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
     },
     "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        },
         "classmap": [
             "database/seeds",
             "database/factories"
-        ],
-        "psr-4": {
-            "App\\": "app/"
-        }
+        ]
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
         }
     },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
-            ]
-        }
-    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate"
-        ],
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta"
         ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
     }
 }
