--- a/composer.json
+++ b/composer.json
@@ -4,25 +4,28 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2",
-        "barryvdh/laravel-debugbar": "^3.2.0",
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "php": "^7.2.5",
+        "barryvdh/laravel-debugbar": "^3.3.3",
+        "barryvdh/laravel-ide-helper": "^2.7",
         "davejamesmiller/laravel-breadcrumbs": "^5.3.0",
         "doctrine/dbal": "^2.5",
-        "fideloper/proxy": "^4.0",
-        "intervention/image": "^2.3",
-        "laravel/framework": "^6.2",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.5.1",
+        "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "watson/active": "^4.0"
+        "laravel/ui": "^2.0",
+        "watson/active": "^5.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "laracasts/generators": "^1.1",
         "laravel/homestead": "^10.3",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "preferred-install": "dist",
